fix: sidenote z-index

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -606,6 +606,7 @@ figure.full-bleed {
 .sidenote-hover {
     border-color: $color-link;
     color: $color-link;
+    z-index: 1;
 }
 
 //#region code snippets
